--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Install wasm-pack
         run: cargo install wasm-pack
 
+      - name: Install wasm-bindgen-cli
+        run: cargo install -f wasm-bindgen-cli
+
       - name: Run build script
         run: ./build.sh
 
